fix: :bug: try to hide scrollbars 2

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,6 @@ body {
     scrollbar-width: none;  /* Firefox */
 }
 
-body::-webkit-scrollbar { 
+*::-webkit-scrollbar { 
     display: none;  /* Safari and Chrome */
 }
